--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Release Notes - SABnzbd 4.2.3 Release Candidate 2
+Release Notes - SABnzbd 4.2.3 Release Candidate 3
 =========================================================
 
 This is the third bug-fix release of SABnzbd 4.2.0.
@@ -6,7 +6,8 @@ This is the third bug-fix release of SABnzbd 4.2.0.
 ## Bug-fixes and changes since 4.2.2:
 
 * **Bug-fixes:**
-    * Handle new status code for missing articles, which could result in timeouts.
+    * Handle new status code for missing articles, which would result in timeouts.
+      This specifically affects Giganews and its resellers.
     * Retry of failed job would not use the password provided.
     * Optimize database handling in order to prevent locking errors.
     * macOS: System standby after finishing the queue would not always work.
