Update text files for 4.3.0RC1

--- a/README.mkd
+++ b/README.mkd
@@ -1,7 +1,7 @@
-Release Notes - SABnzbd 4.3.0 Beta 1
+Release Notes - SABnzbd 4.3.0 Release Candidate 1
 =========================================================
 
-This is the first pre-release of SABnzbd 4.3.0.
+This is the first release candidate of SABnzbd 4.3.0.
 
 ## Key changes since 4.2.0
 
@@ -24,12 +24,13 @@ This is the first pre-release of SABnzbd 4.3.0.
     * Handling of multiple inputs to several API methods was improved.
     * File browser dialog is available to select file paths in the Config.
     * Users will be warned if they configure an Indexer as a Server.
-    * Windows/macOS: Updated Python to 3.12.2, Multipar to v1.3.3.2,
+    * Windows/macOS: Updated Python to 3.12.3, Multipar to v1.3.3.2,
       Unrar to 7.00 and 7zip to 24.03.
 
 ## Bug fixes since 4.2.0
 
 * Incorrect warnings of unknown status codes could be thrown.
+* Watched Folder would not work if Socks5 proxy was active.
 
 ## Upgrade notices
 
