--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Release Notes - SABnzbd 4.3.2 Release Candidate 1
+Release Notes - SABnzbd 4.3.2 Release Candidate 2
 =========================================================
 
 This is the second bug fix release of SABnzbd 4.3.0.
@@ -8,6 +8,7 @@ This is the second bug fix release of SABnzbd 4.3.0.
 * Added Special option `disable_archive` for jobs to always be permanently deleted.
 * Specific AppRise notifications could fail to send.
 * Update of the article decoder core (`rapidyenc`).
+* Windows: After some time the interface would no longer load.
 * Windows: Custom shortcuts would be removed by the installer.
 * Windows/macOS: Updated Unrar to 7.01 and 7zip to 24.05.
 
