--- a/README.mkd
+++ b/README.mkd
@@ -1,9 +1,10 @@
-Release Notes - SABnzbd 4.3.3 Beta 1
+Release Notes - SABnzbd 4.3.3 Beta 2
 =========================================================
 
 This is the third bug fix release of SABnzbd 4.3.0.
 
 ## Bug fixes and changes since 4.3.2
+* Jobs could get stuck at 99%.
 * Correct handling of empty or `Default` category when adding a job.
 * History API-output could contain inconsistent variable types.
 * Skip external IPv6 check if only link local addresses are available.
