--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Release Notes - SABnzbd 4.3.3 Release Candidate 2
+Release Notes - SABnzbd 4.3.3
 =========================================================
 
 This is the third bug fix release of SABnzbd 4.3.0.
