Update text files for 4.4.0Beta1

--- a/README.mkd
+++ b/README.mkd
@@ -1,7 +1,7 @@
-Release Notes - SABnzbd 4.4.0 Alpha 2
+Release Notes - SABnzbd 4.4.0 Beta 1
 =========================================================
 
-This is the first test release of SABnzbd 4.4.0.
+This is the first beta release of SABnzbd 4.4.0.
 
 ## New features since 4.3.0
 
@@ -11,7 +11,10 @@ This is the first test release of SABnzbd 4.4.0.
 ## Bug fixes since 4.3.0
 
 * Toggling of Servers could result in jobs being stuck at 99%.
+* Corrupt NZB's could also result in jobs being stuck at 99%.
 * Config restart would always determine redirect URL instead of using current.
+* Correctly handle `disk full` errors from Unrar.
+* Create new history database in case of `no such table` error.
 
 ## Upgrade notices
 
