--- a/README.mkd
+++ b/README.mkd
@@ -1,14 +1,16 @@
-Release Notes - SABnzbd 4.4.0 Beta 2
+Release Notes - SABnzbd 4.4.0 Release Candidate 1
 =========================================================
 
-This is the second beta release of SABnzbd 4.4.0.
+This is the first release candidate of SABnzbd 4.4.0.
 
 ## New features since 4.3.0
+
 * Subtitle files will be deobfuscated if required.
 * Show server `Personal notes` on the main servers display.
 * Windows: Use par2cmdline-turbo by default (thanks to @dnzbk).
 * macOS: Dropped support for macOS 10.12 and below.
 * macOS and Windows: Use Python 3.13 for release.
+* Windows: The next release will no longer support Windows 32bit or Windows 7.
 
 ## Bug fixes since 4.3.0
 
@@ -17,6 +19,7 @@ This is the second beta release of SABnzbd 4.4.0.
 * Config restart would always determine redirect URL instead of using current.
 * Correctly handle `disk full` errors from Unrar.
 * Create new history database in case of `no such table` error.
+* Interface could load in tabbed mode even though it was not enabled.
 
 ## Upgrade notices
 
