--- a/po/email/SABemail.pot
+++ b/po/email/SABemail.pot
@@ -16,7 +16,7 @@ msgid ""
 "##\n"
 "## Default Email template for SABnzbd\n"
 "## This a Cheetah template\n"
-"## Documentation: http://sabnzbd.wikidot.com/email-templates\n"
+"## Documentation: https://sabnzbd.org/wiki/extra/email-templates\n"
 "##\n"
 "## Newlines and whitespace are significant!\n"
 "##\n"
@@ -61,7 +61,7 @@ msgid ""
 "##\n"
 "## RSS Email template for SABnzbd\n"
 "## This a Cheetah template\n"
-"## Documentation: http://sabnzbd.wikidot.com/email-templates\n"
+"## Documentation: https://sabnzbd.org/wiki/extra/email-templates\n"
 "##\n"
 "## Newlines and whitespace are significant!\n"
 "##\n"
@@ -90,7 +90,7 @@ msgid ""
 "##\n"
 "## Bad URL Fetch Email template for SABnzbd\n"
 "## This a Cheetah template\n"
-"## Documentation: http://sabnzbd.wikidot.com/email-templates\n"
+"## Documentation: https://sabnzbd.org/wiki/extra/email-templates\n"
 "##\n"
 "## Newlines and whitespace are significant!\n"
 "##\n"
