Update text files for 4.5.0RC1

--- a/README.mkd
+++ b/README.mkd
@@ -1,8 +1,7 @@
-Release Notes - SABnzbd 4.5.0 Beta 2
+Release Notes - SABnzbd 4.5.0 Release Candidate 1
 =========================================================
 
-This is the second Beta release of 4.5.0.
-Additional features will be added before the final release.
+This is the first Release Candidate for the 4.5.0 release.
 
 ## New features in 4.5.0
 
@@ -10,6 +9,7 @@ Additional features will be added before the final release.
 * Added more diagnostic information about the system.
 * Use XFF headers for login validation if `verify_xff_header` is enabled.
 * Added Turkish translation (by @cardpuncher).
+* Added `unrar_parameters` option to supply custom Unrar parameters.
 * Windows: Removed MultiPar support.
 * Windows and macOS: Updated Python to 3.13.2, 7zip to 24.09,
   Unrar to 7.10 and par2cmdline-turbo to 1.2.0.
