Update text files for 4.5.1

--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Release Notes - SABnzbd 4.5.1 Release Canidate 1
+Release Notes - SABnzbd 4.5.1
 =========================================================
 
 ## Bug fixes and changes in 4.5.1
