--- a/README.mkd
+++ b/README.mkd
@@ -1,5 +1,16 @@
-Release Notes - SABnzbd 4.5.1
+Release Notes - SABnzbd 4.5.2 Release Candidate 1
 =========================================================
+
+## Bug fixes and changes in 4.5.2
+
+* Added Tab and Shift+Tab navigation to move between rename fields in queue.
+* Invalid cookies of other services could result in errors.
+* Internet Bandwidth test could be stuck in infinite loop.
+* RSS readout did not ignore torrent alternatives.
+* Prowl and Pushover settings did not load correctly.
+* Renamed `osx` to `macos` internally.
+* API: Removed `B` post-fix from `quota` and `left_quota` fields in `queue`.
+* Windows and macOS: Updated par2cmdline-turbo to 1.3.0.
 
 ## Bug fixes and changes in 4.5.1
 
