--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Release Notes - SABnzbd 4.5.2 Release Candidate 1
+Release Notes - SABnzbd 4.5.2 Release Candidate 2
 =========================================================
 
 ## Bug fixes and changes in 4.5.2
@@ -10,7 +10,8 @@ Release Notes - SABnzbd 4.5.2 Release Candidate 1
 * Prowl and Pushover settings did not load correctly.
 * Renamed `osx` to `macos` internally.
 * API: Removed `B` post-fix from `quota` and `left_quota` fields in `queue`.
-* Windows and macOS: Updated par2cmdline-turbo to 1.3.0.
+* Windows: Support more languages in the installer.
+* Windows and macOS: Updated par2cmdline-turbo to 1.3.0 and Unrar to 7.12.
 
 ## Bug fixes and changes in 4.5.1
 
