--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Release Notes - SABnzbd 4.5.3 Beta 1
+Release Notes - SABnzbd 4.5.3 Release Candidate 1
 =========================================================
 
 ## Bug fixes and changes in 4.5.3
