Update text files for 4.5.3

--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Release Notes - SABnzbd 4.5.3 Release Candidate 1
+Release Notes - SABnzbd 4.5.3
 =========================================================
 
 ## Bug fixes and changes in 4.5.3
@@ -10,11 +10,11 @@ Release Notes - SABnzbd 4.5.3 Release Candidate 1
 * Prevent renaming of `.cbr` files during verification.
 * If `--disable-file-log` was enabled, `Show Logging` would crash.
 * API: Added `time_added`, timestamp of when the job was added to the queue.
-* API: History output could have duplicate items.
+* API: History output could contain duplicate items.
 * Snap: Updated packages and changed build process for reliability.
 * macOS: Repair would fail on macOS 10.13 High Sierra.
 * Windows: Unable to start on Windows 8.
-* Windows: Updated Unrar to 7.13 for CVE-2025-8088.
+* Windows: Updated Unrar to 7.13, which resolves CVE-2025-8088.
 
 ## Bug fixes and changes in 4.5.2
 
