Update text files for 4.5.4RC1

--- a/README.mkd
+++ b/README.mkd
@@ -1,9 +1,11 @@
-Release Notes - SABnzbd 4.5.4 Beta 2
+Release Notes - SABnzbd 4.5.4 Release Candidate 1
 =========================================================
 
 ## Bug fixes and changes in 4.5.4
 
 * Add option to History details to mark job as `Completed`.
+* New Notification option `Quota` added (enabled by default) for all
+  Notification services. Will send notifications at 75%, 90% and 100% quota usage.
 * Handle `S04 - 10` (anime) episode notation for Sorting and Duplicate Detection.
 * Add Move to Top/Bottom options to Multi-Operations.
 * Require correct server test in setup wizard.
@@ -12,9 +14,14 @@ Release Notes - SABnzbd 4.5.4 Beta 2
 * Let Unrar handle rename of invalid characters on Windows filesystem.
 * Active connections counter in Status window were not updated correctly.
 * Job setting changes during URL-grabbing would sometimes be ignored.
+* Some `.par2` files could be left because they were not fully parsed.
+* Applying changes to Server configuration showed `Failure` while the page reloaded.
+* No longer using vendored `sabnzbd.rarfile` module, switched to `rarfile>=4.2`.
+* When using Socks5 proxy, `Local IPv4 address` could not be determined.
 * Linux: Enable `Make Windows compatible` automatically if needed.
 * Windows: Release is now signed using SignPath Foundation certificate.
 * Windows: Start SABnzbd directly from the installer.
+* Windows and macOS: Use Python 3.14 for binaries.
 
 ## Bug fixes and changes in 4.5.3
 
